src/client/front/components/app/css/responsive.css
/******
DESKTOP
*******/

@media only screen and (min-width: 1366px) {
	.box-content {
		width: 1300px;
	}
	.home-content,
	.calculator-input {
		margin: 1rem auto;
		width: 550px;
	}
	.calculator-output,
	.history-content,
	.about-content,
	.contact-content {
		margin: 1rem auto;
		width: 800px;
	}
}

/******
LAPTOP
*******/

@media only screen and (min-width: 1024px) and (max-width: 1365px) {
	.box-content {
		width: 900px;
	}
	.contact-content,
	.calculator-input {
		margin: 1rem auto;
		width: 450px;
	}
	.home-content,
	.calculator-output,
	.history-content,
	.about-content {
		margin: 1rem auto;
		width: 600px;
	}
}

/******
TABLET
*******/

@media only screen and (min-width: 601px) and (max-width: 1023px) {
	.box-content {
		max-width: 650px;
	}
	.calculator-input {
		margin: 1rem auto;
		width: 450px;
	}
}

/******
MOBILE
*******/

/*Portrait*/

@media only screen and (max-width: 600px) {
	.box {
		margin: 0.5rem;
	}
	.box-content {
		max-width: 600px;
		padding: 1rem 0.5rem;
	}
	.home-intro {
		display: inline-block;
		text-align: center;
	}
	.about-question > span {
		display: none;
	}
}

/* MOBILE NAVBAR */
@media only screen and (max-width: 700px) {
	/* NAVBAR */
	.nav-custom > .nav-custom-btn {
		display: inline-block;
		position: absolute;
		right: 0px;
		top: 0px;
	}
	.nav-custom > .nav-custom-btn > label {
		display: inline-block;
		height: 50px;
		padding: 13px;
		width: 50px;
	}

	.nav-custom #nav-custom-check:checked ~ .nav-custom-btn > label {
		background: var(--element-color-3);
		border: 2px solid var(--element-color-1);
	}
	.nav-custom > .nav-custom-btn > label > span {
		border-top: 2px solid var(--border-color-1);
		display: block;
		height: 10px;
		width: 25px;
	}
	.nav-custom > .nav-custom-links {
		background: var(--element-color-3);
		display: block;
		height: 0px;
		left: 0px;
		overflow-y: hidden;
		position: absolute;
		top: 50px;
		transition: all 0.2s ease-in;
		width: 100%;
	}
	.nav-custom > .nav-custom-links > button {
		font-weight: 600;
		display: block;
		margin: 0 0 1rem 0.5rem;
		padding: 12px 0 4px 0;
		text-align: left;
		width: 100%;
	}
	.nav-custom > #nav-custom-check:not(:checked) ~ .nav-custom-links {
		height: 0px;
	}
	.nav-custom > #nav-custom-check:checked ~ .nav-custom-links {
		height: calc(100vh - 50px);
		overflow-y: auto;
		padding: 1.5rem 14rem 5rem 1.5rem;
	}

	.nav-custom-links .navbar-separator {
		display: none;
	}
}

